@@ -14,13 +14,14 @@ class wxReportScheduler( wx.Printout ):
 	For other info on wxPrintOut class and methods check the wxPython 
 	documentation (RTFM for nerds ;-) ).
 	"""
-	def __init__( self, format, style, drawerClass, day, weekstart, schedules ):
+	def __init__( self, format, style, drawerClass, day, weekstart, periodCount, schedules ):
 		self._format	= format
 		self._style = style
 		self._drawerClass = drawerClass
 		self._day		= day
 		self._schedules	= schedules
 		self._weekstart = weekstart
+		self._periodCount = periodCount
 		self.pages		= 1
 		
 		wx.Printout.__init__( self )
@@ -37,6 +38,7 @@ class wxReportScheduler( wx.Printout ):
 		scheduler.SetDrawer( self._drawerClass )
 		scheduler.SetDate( day )
 		scheduler.SetWeekStart( self._weekstart )
+		scheduler.SetPeriodCount( self._periodCount )
 
 		for schedule in self._schedules:
 			scheduler.Add( schedule )
